[gd_scene load_steps=6 format=3 uid="uid://cimenfkh3p2bi"]

[ext_resource type="Script" uid="uid://dfpoc7i0gun7p" path="res://Assets/Scripts/menu_script.gd" id="1_bd63t"]
[ext_resource type="FontFile" uid="uid://d0aa0n6jevuyc" path="res://Assets/font/Jacquard12-Regular.ttf" id="2_nkcy3"]
[ext_resource type="Texture2D" uid="uid://cclc45ds2oxjx" path="res://icon.svg" id="3_q7fko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pbfds"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8t58v"]
bg_color = Color(0.7521797, 0.489276, 0.7697539, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bd63t")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -46.0
offset_right = 324.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 4
theme_override_constants/paragraph_spacing = 0
theme_override_fonts/font = ExtResource("2_nkcy3")
theme_override_font_sizes/font_size = 90
text = "Ashes of the Vessel"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -165.0
offset_right = 301.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_constants/separation = 31

[node name="Start" type="Button" parent="VBoxContainer"]
layout_direction = 4
layout_mode = 2
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0.6955572, 0.91173995, 0.9269144, 1)
theme_override_fonts/font = ExtResource("2_nkcy3")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_pbfds")
theme_override_styles/hover = SubResource("StyleBoxFlat_8t58v")
text = "Start"
alignment = 0

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_direction = 4
layout_mode = 2
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0.6955572, 0.91173995, 0.9269144, 1)
theme_override_fonts/font = ExtResource("2_nkcy3")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_pbfds")
theme_override_styles/hover = SubResource("StyleBoxFlat_8t58v")
text = "Credits"
alignment = 0

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_direction = 4
layout_mode = 2
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0.6955572, 0.91173995, 0.9269144, 1)
theme_override_fonts/font = ExtResource("2_nkcy3")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_pbfds")
theme_override_styles/hover = SubResource("StyleBoxFlat_8t58v")
text = "Exits
"
alignment = 0

[node name="MenuBackground" type="Parallax2D" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="MenuBackground"]
position = Vector2(-5, -1)

[node name="Sprite2D" type="Sprite2D" parent="MenuBackground/ParallaxLayer"]
position = Vector2(69, 58)
texture = ExtResource("3_q7fko")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
